# orm-spl

./: README.md  pyproject.toml
app/: model.py  schema.py
test/: test_main.py
